--- a/README
+++ b/README
@@ -1,7 +1,7 @@
+cp buildout.cfg.in buildout.cfg
+emacs buildout.cfg #Set configuration parameters
 python bootstrap.py
-cp instance.cfg.in instance.cfg
-emacs instance.cfg #Set SQLAlchemy database address and Google Maps key
-./bin/buildout -c instance.cfg
+./bin/buildout
 ./bin/manage create_all -c etc/flask.cfg
 ./bin/manage load_aerodromes -c etc/flask.cfg
 ./bin/manage load_blacklist -c etc/flask.cfg
@@ -9,4 +9,3 @@ emacs instance.cfg #Set SQLAlchemy database address and Google Maps key
 ./bin/manage runserver -c etc/flask.cfg -t 0.0.0.0
 #To start gunicorn:
 ./bin/gunicorn -c etc/gunicorn.cfg "cadorsfeed:create_app('etc/flask.cfg')"
-
